Fix index visual issue on mobile

--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -30,7 +30,7 @@
 
 .clubs li {
     float: left;
-    margin: 15px 25px;
+    margin: 15px 22px;
     min-width: 100px;
 }
 
